# coinplus-app

./: .gitignore  .metadata  analysis_options.yaml  firebase_options.dart  gradle.properties  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle  google-services.json
assets/animated_logo/: secrets_success.json
assets/colors/: colors.xml
assets/lottie_animations/: animated_logo.json  arrow.json  card_hovering_transaction.json  card_twist_black.json  card_twist_orange.json  card_twist_white.json  loading_animation.json  lost_card_animation.json  nfcanimation.json  pending.json  phone_coin_splash.json  please_wait.json  secrets_fail.json  send_loading.json
bitcoin_transaction/: Cargo.toml
bitcoin_transaction/src/: lib.rs
ios/: Podfile  firebase_app_id_file.json
ios/Coinplus/: AppIntent.swift  Coinplus.swift  CoinplusBundle.swift  CoinplusLiveActivity.swift
ios/Runner/: GoogleService-Info.plist  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  Fastfile
lib/: app.dart  firebase_options.dart  main.dart  main_dev.dart  main_prod.dart  router.dart  router.gr.dart
lib/constants/: bar_color.dart  button_settings.dart  card_color.dart  card_record.dart  card_type.dart  chart_period_enum.dart  currency.dart  durations.dart  fee_rate_mode.dart  flavor_type.dart  nxp_known_public_key.dart  ramp_countries.dart
lib/custom_widgets/: loading_button.dart
lib/http/: dio.dart
linux/: CMakeLists.txt
runConfigurations/: main.dart.run.xml  main_prod.dart.run.xml
windows/: CMakeLists.txt
(+548 files in other folders)
