[package]
name = "bitcoin_transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
flutter_rust_bridge_codegen = { version = "= 2.0.0-dev.28"  }

[lib]
name = "bitcoin_transaction"
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=1.80.1"
flutter_rust_bridge_macros = "=1.80.1"
bitcoin = "0.42"
grpcio = "0.8"
prost = "0.9"